--- a/navMenu.css
+++ b/navMenu.css
@@ -57,3 +57,32 @@ ul{
 p{
     margin-top: 70px;
 } */
+
+
+.container{
+    max-width: 1000px;
+    width: 100%;
+    margin-inline: auto;
+}
+
+.wrap{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    border: 1px solid #000;
+}
+
+.users-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+
+.user-card{
+    max-width: 300px;
+    width: 100%;
+    height: 250px;
+    background: #000;
+    border-radius: 10px;
+}
