--- a/input2/style.css
+++ b/input2/style.css
@@ -26,6 +26,7 @@ button, input{
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 8px;
+    transition: border-color 0.3s, box-shadow 0.3s;
 }       
 .input:focus {
     border-color: #007BFF;
