--- a/navMenu.css
+++ b/navMenu.css
@@ -15,6 +15,12 @@ ul{
     gap: 20px;
     justify-content: center;
 }
+    .item-list{
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .2s;
+}
 
 .item{
     cursor: pointer;
@@ -27,12 +33,7 @@ ul{
     }
 }
 
-.item-list{
-    position: absolute;
-    opacity: 0;
-    visibility: hidden;
-    transition: all .2s;
-} */
+ */
 
 
 
