--- a/6_profcardMals/index.css
+++ b/6_profcardMals/index.css
@@ -1,3 +1,19 @@
+* {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    ul, ol{
+        list-style: none;
+    }
+    
+    button, input{
+        outline: none;
+        border: none
+    }
+
+
 .profile-container{
     height: 100vh;
     background-color:lightgrey;
@@ -15,9 +31,9 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    max-width: 300px;
+    max-width: 350px;
     width: 100%;
-    font-family: consolas, sans-serif;
+    font-family: "consolas", sans-serif;
 }
 .profile-image{
     border-radius: 50%;
