--- a/неделя-2/index.css
+++ b/неделя-2/index.css
@@ -1,11 +1,13 @@
-/* @import url('./reset.css'); */
-
-
 .btn{
     padding: 10px;
     background: #000;
     color: #fff;
     border-radius: 10px;
+    transition: all 0.6s;
+}
+.btn:hover{
+    background: red;
+    color: blue;
 }
 
 .btn-max{
