--- a/Hard_maket/Styles/Pages/Application_form.css
+++ b/Hard_maket/Styles/Pages/Application_form.css
@@ -2,3 +2,11 @@ textarea {
   outline: none;
   border: none;
 }
+.application_form {
+  width: 400px;
+  background: #fff;
+  padding: 15px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
