--- a/Hard_maket/Styles/Pages/User_profile.css
+++ b/Hard_maket/Styles/Pages/User_profile.css
@@ -7,3 +7,11 @@
     height: max-content;
   }
 }
+.user_profile_form {
+  width: 400px;
+  background: #fff;
+  padding: 15px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
