--- a/test.css
+++ b/test.css
@@ -4,40 +4,8 @@
     box-sizing: border-box;
 }
 
-body{
-    padding: 20px;
-}
-/* 
-.item{
-    border: 1px solid #000;
-    width: 220px;
+a{
+    text-decoration: none;
 }
 
-input{
-    border: 1px solid red;
-    width: 210px;
-    padding: 0 30px;
-} */
 
-
-button{
-    border: none;
-    outline: none;
-}
-
-.btn{
-    border-radius: 10px;
-    font-size: 20px;
-    padding: 10px;
-}   
-
-.btn-primary{
-    background: #000;
-    color: #fff;
-    border: 10px solid #000;
-}
-
-.btn-outline{
-    background: transparent;
-    border: 1px solid #000;
-}
