--- a/maket_end/styles/components/happy.css
+++ b/maket_end/styles/components/happy.css
@@ -18,7 +18,7 @@
 .happy-items{
   display: flex;
   margin-top: 40px;
-  
+
 }
 
 .happy-comments-block{
@@ -43,5 +43,6 @@ padding: 28px 32px 50.42px 32px;
 
 .commentator-name{
   display: flex;
+  align-items: center;
   gap: 4px;
 }
