--- a/3-этап/ui-components/src/index.css
+++ b/3-этап/ui-components/src/index.css
@@ -13,3 +13,39 @@ button, input, select, textarea{
   outline: none;
   border: none;
 }
+
+.App{
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal{
+  background: #fff;
+  border-radius: 10px;
+  padding: 30px;
+  max-width: 400px;
+  width: 100%;
+  position: relative;
+
+  .close{
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    font-size: 26px;
+  }
+}
