--- a/3-этап/react-app/src/index.css
+++ b/3-этап/react-app/src/index.css
@@ -14,3 +14,12 @@ button:disabled{
 }
 
 
+
+.card{
+  max-width: 300px;
+  border: 1px solid #000;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 20px;
+}
