--- a/3-этап/react-app/src/index.css
+++ b/3-этап/react-app/src/index.css
@@ -23,3 +23,11 @@ button:disabled{
   gap: 10px;
   padding: 20px;
 }
+
+
+.user-card{
+  border: 1px solid #dbdbdb;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 300px;
+}
