--- a/3-этап/react-app/src/index.css
+++ b/3-этап/react-app/src/index.css
@@ -36,3 +36,18 @@ button:disabled{
   border-radius: 10px;
   max-width: 300px;
 }
+
+.movie-item{
+  padding: 20px;
+  border-radius: 10px;
+  border: 1px solid #dbdbdb;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  max-width: 200px;
+}
+
+.movie-item.m{
+  max-width: 250px;
+}
