--- a/3-этап/usestateapp/src/index.css
+++ b/3-этап/usestateapp/src/index.css
@@ -2,15 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: monospace;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #FFFEF9;
 }
 
 code {
@@ -18,47 +14,8 @@ code {
     monospace;
 }
 
-
-
-
-button:disabled{
-  opacity: .5;
-  cursor: not-allowed;
-}
-
-.item-card{
-  box-shadow: 0 0 10px rgba(0,0,0, 0.5);
-  border-radius: 10px;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-items: flex-start;
-  width: max-content;
-}
-
-.str-tag{
-  padding: 4px;
-  border-radius: 5px;
-  width: max-content;
-}
-
-.BUG{
-  background: rgb(238, 117, 117);
-  color: #fff;
-}
-
-.FIXED{
-  background: #ffb811;
-  color: #fff;
-}
-
-.WARNING{
-  background: #ffff00;
-  color: #000;
-}
-
-.ERROR{
-  background: red;
-  color: #fff;
+.container{
+  max-width: 600px;
+  width: 100%;
+  margin:  0 auto;
 }
